# hardwave-suite

./: .cirrus.yml  .dockerignore  .env.example  .gitignore  CLAUDE.md  LICENSE  SELF_HOSTED_UPDATES.md  build-windows.ps1  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json  tsconfig.node.json  turbo.json  vite.config.ts
.github/workflows/: build.yml  deploy-web.yml  release.yml
apps/analyser/: CLAUDE.md  Dockerfile  next.config.ts  package.json
apps/analyser/src/app/: layout.tsx  page.tsx
apps/analyser/src/lib/: auth.ts  types.ts
apps/erp/: CLAUDE.md  Dockerfile  next.config.ts  package.json
apps/erp/src/app/: globals.css  layout.tsx  page.tsx
apps/erp/src/hooks/: use-toast.ts  useMediaQuery.ts
apps/erp/src/lib/: contract-storage.ts  email.ts  erp.ts  (+7 more)
apps/main/: .env.example  CLAUDE.md  Dockerfile  next.config.ts  package.json
apps/main/migrations/: 002_add_user_profile_fields.sql  002_erp_finance.sql  005_erp_crm.sql
apps/main/public/: manifest.json  sw.js
apps/wettboi/: CLAUDE.md  Dockerfile  next.config.ts  package.json
deploy/admin-panel/: Caddyfile  docker-compose.yml
deploy/analyser/: Caddyfile  docker-compose.yml
deploy/scripts/: common.sh  run-migrations.sh  setup-admin-panel.sh  setup-analyser.sh  setup-static-pages.sh  setup-wettboi.sh  update.sh
deploy/static-pages/: Caddyfile  docker-compose.yml
deploy/wettboi/: Caddyfile  docker-compose.yml
installer/: index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
installer/src/: App.tsx  index.css
installer/src-tauri/: Cargo.toml  build.rs  manifest.xml  tauri.conf.json
installer/src-tauri/capabilities/: default.json
installer/src-tauri/src/: acl.rs  install.rs  lib.rs  main.rs  shortcut.rs  uninstall.rs
installer/src/components/: HwLogo.tsx  WindowChrome.tsx
installer/src/lib/: api.ts
installer/src/screens/: Done.tsx  Installing.tsx  Location.tsx  Splash.tsx  Welcome.tsx
migrations/: 003_erp_projects.sql  007_erp_invoicing.sql
scripts/: generate-latest-json.mjs  migrate.ts
src/: App.old.tsx  App.tsx  index.css  main.tsx
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json  remote.json
src-tauri/nsis/: installer.nsi
src-tauri/src/: api.rs  automix.rs  beta.rs  bridge.rs  collabs.rs  db.rs  fl_script.py  lib.rs  main.rs  models.rs  scanner.rs
src-tauri/src/websocket/: audio_state.rs  mod.rs  protocol.rs  server.rs
src/components/: AddTagsModal.tsx  AddToCollectionModal.tsx  BetaBuildsSection.tsx  Button.tsx  Card.tsx  CloudUploadModal.tsx  CollabChat.tsx  CollabStatus.tsx  ConfirmDeleteModal.tsx  ContextMenu.tsx  CrashReportModal.tsx  CreateCollectionModal.tsx  FileCard.tsx  FileDetailsPanel.tsx  FilterPanel.tsx  HwLogo.tsx  HwWaveMark.tsx  ImportModal.tsx  Input.tsx  LoginScreen.tsx  Onboarding.tsx  SearchBar.tsx  SettingsPanel.tsx  ShareDialog.tsx  Sidebar.tsx  SplashScreen.tsx  SubscriptionRequired.tsx  Tag.tsx  TagManagementModal.tsx  ToolSwitcher.tsx  UpdateBanner.tsx  UpdateModal.tsx  UpdatePopup.tsx  VirtualizedFileGrid.tsx
src/components/organizer/: FileCard.tsx  OrganizerSidebar.tsx  Toolbar.tsx  Waveform.tsx  index.ts
src/hooks/: useVstAudio.ts
src/lib/: analyserMath.ts  api.ts  applyTheme.ts  automix.ts  beta.ts  collabs.ts  tauri.ts
src/store/: index.ts
src/types/: electron.d.ts  index.ts
src/views/: AnalyserView.tsx  AutoMixView.tsx  CollabsView.tsx  DownloadsView.tsx  HubView.tsx  KickforgeView.tsx  SettingsView.tsx
website/: Dockerfile  docker-compose.yml  next.config.ts  package-lock.json  package.json
website/migrations/: 001_erp_core.sql  004_erp_hr.sql  006_erp_inventory.sql  008_erp_foreign_keys.sql  009_erp_notifications.sql  010_erp_hr_contracts.sql  011_contract_signature_positions.sql
website/src/: middleware.ts
website/src/app/: page.tsx
website/src/components/: AnalyserCanvas.tsx  DashboardNav.tsx
website/src/hooks/: use-toast.ts
website/src/lib/: db.ts  email.ts  pdf-signer.ts  refine-access-control.ts  refine-resources.ts  stripe-client.ts  stripe.ts  types.ts
(+316 files in other folders)
