[package]
name = "hardwave-suite"
version = "0.5.2"
description = "Hardwave Suite - Production toolkit for harder-styles producers"
authors = ["Hardwave Studios"]
license = "MIT"
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "hardwave_organizer_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-shell = "2"
tauri-plugin-log = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
log = "0.4"
rusqlite = { version = "0.31", features = ["bundled"] }
notify = "6"
walkdir = "2"
sha2 = "0.10"
hex = "0.4"
tokio = { version = "1", features = ["full"] }
chrono = { version = "0.4", features = ["serde"] }
reqwest = { version = "0.12", features = ["json"] }
dirs = "5"
symphonia = { version = "0.5", features = ["all"] }
pitch-detection = "0.3"

# WebSocket server for VST bridge
tokio-tungstenite = "0.21"
futures-util = "0.3"
bincode = "1.3"
serde-big-array = "0.5"

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-updater = "2"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
