[package]
name = "hardwave-suite"
version = "0.16.1"
edition = "2021"

[lib]
name = "hardwave_suite_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-log = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json", "stream", "multipart"] }
dirs = "5"
futures-util = "0.3"
zip = "2"
flate2 = "1"
tar = "0.4"
tauri-plugin-dialog = "2.6.0"
tokio-tungstenite = { version = "0.24", features = ["native-tls"] }
sha2 = "0.10"
toml = "0.8"
chrono = { version = "0.4", features = ["serde"] }

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-updater = "2"
tauri-plugin-process = "2"
