[package]
name = "hardwave-suite-installer"
version = "0.2.0"
edition = "2021"
description = "Hardwave Suite custom installer"
publish = false

[lib]
name = "hardwave_suite_installer_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

# `winres` is only used on Windows to embed the UAC-requesting manifest.
# Gated under `cfg(windows)` so non-Windows CI jobs (Linux/macOS) don't try
# to build it — see build.rs.
[target.'cfg(windows)'.build-dependencies]
winres = "0.1"

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json", "stream", "rustls-tls"], default-features = false }
futures-util = "0.3"
zip = "2"
dirs = "5"

[target.'cfg(windows)'.dependencies]
winreg = "0.52"
mslnk = "0.1"
